--- a/Friday.ERP.Client/Pages/Inventory/Index.razor
+++ b/Friday.ERP.Client/Pages/Inventory/Index.razor
@@ -14,7 +14,7 @@
 @attribute [Authorize]
 
 <CustomContainer>
-    <CustomPage Md="12" Lg="12" IsLoading="@_isMainLoading">
+    <CustomPage Sm="12" Md="12" IsLoading="@_isMainLoading">
         <MudGrid Spacing="2">
             <MudItem sm="12" Class="align-self-center">
                 <MudText Typo="Typo.h6">Categories</MudText>
