--- a/Friday.ERP.Client/Pages/UserManagement/Components/CustomTab.razor
+++ b/Friday.ERP.Client/Pages/UserManagement/Components/CustomTab.razor
@@ -1,6 +1,6 @@
 ﻿<MudTabPanel Text="@TitleText" OnClick="@OnTabClick">
     <MudProgressLinear Color="Color.Primary" Class="mt-6 mb-4" Indeterminate="@IsLoading"/>
-    <MudGrid Spacing="2">
+    <MudGrid Spacing="2" Justify="Justify.SpaceBetween">
         @CustomHeader
     </MudGrid>
     <MudGrid Spacing="2" Class="mt-4" Justify="Justify.FlexStart"
