--- a/Friday.ERP.Client/Shared/Components/Molecules/CustomRowWithLabelAndFieldString.razor
+++ b/Friday.ERP.Client/Shared/Components/Molecules/CustomRowWithLabelAndFieldString.razor
@@ -1,5 +1,5 @@
-<CustomRowWithLabelAndInput Md="@FirstMd" Lg="@FirstLg" FirstText="@FirstText" Typo="@Typo">
-    <MudItem md="@SecondMd" lg="@SecondLg" Class="align-self-center">
+<CustomRowWithLabelAndInput Sm="FirstSm" Md="@FirstMd" FirstText="@FirstText" Typo="@Typo">
+    <MudItem sm="@SecondSm" md="@SecondMd" Class="align-self-center">
         <MudTextField T="string" @bind-Value="@BindValue" Required="@Required" Immediate="true"
                       FullWidth="true" InputType="@KeyboardInputType"
                       Margin="Margin.Dense" Variant="Variant.Outlined">
@@ -10,13 +10,13 @@
 
 @code {
 
+    [Parameter] public int FirstSm { get; set; } = 5;
+
     [Parameter] public int FirstMd { get; set; } = 5;
 
-    [Parameter] public int FirstLg { get; set; } = 5;
+    [Parameter] public int SecondSm { get; set; } = 7;
 
     [Parameter] public int SecondMd { get; set; } = 7;
-
-    [Parameter] public int SecondLg { get; set; } = 7;
 
     [Parameter] public string? FirstText { get; set; }
 
