--- a/Friday.ERP.Client/Pages/Settings/Index.razor
+++ b/Friday.ERP.Client/Pages/Settings/Index.razor
@@ -10,7 +10,7 @@
 @attribute [Authorize]
 
 <CustomContainer>
-    <CustomPage Md="6" Lg="6" IsLoading="@_isMainLoading">
+    <CustomPage Sm="6" Md="6" IsLoading="@_isMainLoading">
         <MudGrid Spacing="2">
             <MudItem sm="12" md="12" lg="12" Class="align-self-center">
                 <MudText Typo="Typo.h6">
@@ -44,7 +44,7 @@
         </MudGrid>
         <MudDivider DividerType="DividerType.FullWidth" Class="my-4"></MudDivider>
     </CustomPage>
-    <CustomPage Md="6" Lg="6" IsLoading="@_isMainLoading">
+    <CustomPage Sm="6" Md="6" IsLoading="@_isMainLoading">
         <MudGrid Spacing="2">
             <MudItem sm="12" md="12" lg="12" Class="align-self-center">
                 <MudText Typo="Typo.h6">
