--- a/Friday.ERP.Client/Shared/Components/Templates/CustomPage.razor
+++ b/Friday.ERP.Client/Shared/Components/Templates/CustomPage.razor
@@ -1,4 +1,4 @@
-<MudItem md="@Md" lg="@Lg" Class="align-self-center">
+<MudItem sm="Sm" md="@Md" Class="align-self-center">
     @if (IsLoading)
     {
         <CustomLoadingPage/>
@@ -17,9 +17,9 @@
 
     [Parameter] public bool IsFlex { get; set; } = true;
 
-    [Parameter] public int Md { get; set; } = 6;
+    [Parameter] public int Sm { get; set; } = 6;
 
-    [Parameter] public int Lg { get; set; } = 6;
+    [Parameter] public int Md { get; set; } = 6;
 
     [Parameter] public bool IsLoading { get; set; }
 
