--- a/Friday.ERP.Client/Pages/Inventory/Index.razor
+++ b/Friday.ERP.Client/Pages/Inventory/Index.razor
@@ -33,10 +33,10 @@
         </MudGrid>
         <MudProgressLinear Color="Color.Primary" Class="mt-2 mb-4" Indeterminate="@_isLoading"/>
         <MudGrid Spacing="2">
-            <MudItem sm="12" md="3" lg="6" Class="align-self-center">
+            <MudItem sm="12" md="4" Class="align-self-center">
                 <MudText Typo="Typo.h6">Products</MudText>
             </MudItem>
-            <MudItem sm="12" md="3" lg="2">
+            <MudItem sm="12" md="3" Class="align-self-center">
                 <MudAutocomplete T="string?"
                                  Label="Category"
                                  Clearable="true"
@@ -50,12 +50,12 @@
                                  OnClearButtonClick="@CategoryClear">
                 </MudAutocomplete>
             </MudItem>
-            <MudItem sm="12" md="3" lg="2">
+            <MudItem sm="12" md="3" Class="align-self-center">
                 <CustomTextFieldWithIcon BindValue="@_searchTerm" ValueChanged="ChangeProductSearchValue" ClassParameter="mr-2"/>
             </MudItem>
-            <MudItem sm="12" md="3" lg="2" Class="align-self-center">
+            <MudItem sm="12" md="2" Class="align-self-center">
                 <CustomButton Variant="Variant.Filled"
-                    Label="Create New" IsLoading="_isLoading" OnClick="@OpenProductCreateDialog"/>
+                              Label="Create New" IsLoading="_isLoading" OnClick="@OpenProductCreateDialog"/>
             </MudItem>
         </MudGrid>
         <MudGrid Spacing="2" Class="mt-4" Justify="Justify.FlexStart" Style="overflow-y: auto;">
@@ -195,7 +195,7 @@
 
         var categoryGuid = _categoryProductList.Where(x => x.Name == _categoryName)
             .Select(c => c.Guid).SingleOrDefault();
-        
+
         var result = await HttpRepo.GetAllProducts(new ProductParameter
         {
             PageNumber = 1,
